Changed index header

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- HERO LANDING -->
         <div class="tc pa4 sourceserif">
           <h1 class="f2 f1-l fw9 mb0 lh-title">My name is Alex.</h1>
-          <h2 class="fw1 f3 mt3">I am a designer in the Bay Area.</h2>
+          <h2 class="fw1 f3 mt3 mw7 center lh-copy">I'm a designer in the Bay Area trying to use my background in human behavior and technology to solve problems.</h2>
         </div>
       </div>
     </section>
