Finished with Thinkabit project

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <!-- HERO LANDING -->
         <div class="tc pa4 sourceserif">
           <h1 class="f2 f1-l fw9 mb0 lh-title">Howdy &#128075;</h1>
-          <h2 class="fw1 f3 mt3">Now this is the story all about how my li&mdash;nevermind</h2>
+          <h2 class="fw1 f3 mt3 mw7 center lh-copy">Now this is the story all about how my li&mdash;nevermind</h2>
         </div>
       </div>
     </section>
