--- a/illustrations.html
+++ b/illustrations.html
@@ -27,7 +27,7 @@
         <!-- HERO LANDING -->
         <div class="tc pa4 sourceserif">
           <h1 class="f2 f1-l fw9 mb0 lh-title">Illustrations</h1>
-          <h2 class="fw1 f3 mt3">My attempts at getting better with the pen tool.</h2>
+          <h2 class="fw1 f3 mt3 mw7 center lh-copy">My attempts at getting better with the pen tool.</h2>
         </div>
       </div>
     </section>
