--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </article>
 
       <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
-        <a href="#0">
+        <a href="thinkabit.html">
           <div class="aspect-ratio aspect-ratio--4x3 dim point">
             <img style="background-image:url(images/Think.png);"
             class="db bg-center cover aspect-ratio--object" />
