--- a/oppia.html
+++ b/oppia.html
@@ -27,7 +27,7 @@
         <!-- HERO LANDING -->
         <div class="tc pa4 sourceserif">
           <h1 class="f2 f1-l fw9 mb0 lh-title">Oppia</h1>
-          <h2 class="fw1 f3 mt3">Open-source, interactive learning for all</h2>
+          <h2 class="fw1 f3 mt3 mw7 center lh-copy">Open-source, interactive learning for all.</h2>
         </div>
       </div>
     </section>
