--- a/overwatch.html
+++ b/overwatch.html
@@ -27,7 +27,7 @@
         <!-- HERO LANDING -->
         <div class="tc pa4 sourceserif">
           <h1 class="f2 f1-l fw9 mb0 lh-title">Overwatch Team Builds</h1>
-          <h2 class="fw1 f3 mt3">Quickly find the best team compositions for any map, any game mode</h2>
+          <h2 class="fw1 f3 mt3 mw7 center lh-copy">Quickly find the best team compositions for any map, any game mode.</h2>
         </div>
       </div>
     </section>
@@ -42,7 +42,7 @@
       <!-- PROJECT OVERVIEW -->
       <article class="fl w-100 w-50-m w-50-ns pa3 pa3-ns">
         <span class="ph2 ph0-ns pb3 link db">
-          <h3 class="f4 f3-ns mb0 black-90 sourceserif">"Heroes never die."</h3>
+          <h3 class="f4 f3-ns mb0 black-90 sourceserif">"Nerf this!"</h3>
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">
             Overwatch — in its main form — is a matchup between two teams, each consisting of 6 heroes. With 20+ maps and 20+ heroes, it can take hours of experience or research to finally figure out the subtle advantages a given hero can have on a given map.
 
@@ -55,6 +55,10 @@
       <!-- PROJECT DETAILS -->
       <article class="fl w-100 w-50-m w-50-ns pa3 pa3-ns">
         <span class="ph2 ph0-ns pb3 link db">
+          <div>
+            <h3 class="f5 f5-ns ttu mb0 black-90 sourceserif">Platform</h3>
+            <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Mobile</h3>
+          </div>
           <div>
             <h3 class="f5 f5-ns ttu mb0 black-90 sourceserif">Role</h3>
             <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Sole Designer</h3>
