--- a/teammatic.html
+++ b/teammatic.html
@@ -27,7 +27,7 @@
         <!-- HERO LANDING -->
         <div class="tc pa4 sourceserif">
           <h1 class="f2 f1-l fw9 mb0 lh-title">Teammatic</h1>
-          <h2 class="fw1 f3 mt3">A team formation UI tool for instructors</h2>
+          <h2 class="fw1 f3 mt3 mw7 center lh-copy">A team formation UI tool designed and built for instructors.</h2>
         </div>
       </div>
     </section>
@@ -60,11 +60,11 @@
             <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Desktop</h3>
           </div>
           <div>
-            <h3 class="f5 f5-ns ttu mt4 mb0 black-90 sourceserif">Position</h3>
+            <h3 class="f5 f5-ns ttu mt4 mb0 black-90 sourceserif">Role</h3>
             <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Sole UX Designer</h3>
           </div>
           <div>
-            <h3 class="f5 f5-ns ttu mt4 mb0 black-90 sourceserif">Duration</h3>
+            <h3 class="f5 f5-ns ttu mt4 mb0 black-90 sourceserif">Timeline</h3>
             <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">3 months</h3>
           </div>
           <div>
