--- a/upcoming.html
+++ b/upcoming.html
@@ -27,7 +27,7 @@
         <!-- HERO LANDING -->
         <div class="tc pa4 sourceserif">
           <h1 class="f2 f1-l fw9 mb0 lh-title">Up + Coming</h1>
-          <h2 class="fw1 f3 mt3">Junior-level design podcast from a junior-level perspective.</h2>
+          <h2 class="fw1 f3 mt3 mw7 center lh-copy">Junior-level design podcast from a junior-level perspective.</h2>
         </div>
       </div>
     </section>
