Make sure all full-width images are set at 100%

--- a/oppia.html
+++ b/oppia.html
@@ -89,7 +89,7 @@
     </div>
 
     <section class="fullest-container">
-      <img src="images/upcominglanding-2.png" />
+      <img class="w-100" src="images/upcominglanding-2.png" />
     </section>
 
     <!-- FIRST ROW -->
