--- a/teammatic.html
+++ b/teammatic.html
@@ -82,7 +82,7 @@
     </div>
 
     <section class="fullest-container">
-      <img src="images/Teammatic-1.png" />
+      <img class="w-100" src="images/Teammatic-1.png" />
     </section>
 
     <!-- FIRST ROW -->
@@ -96,7 +96,7 @@
       </article>
 
       <section class="fullest-container">
-        <img src="images/teamiteration.png" class="br2 shadow"/>
+        <img class="w-100" src="images/teamiteration.png" class="br2 shadow"/>
       </section>
       <span class="ph2 ph0-ns pb3 link db tc">
         <h3 class="f6 fw4 mt2 black-60 worksans">Iterations: transitioning from 3-columns to 2-columns</h3>
@@ -131,7 +131,7 @@
       </article>
 
       <section class="fullest-container">
-        <img src="images/swap-2.png" class="br2 shadow"/>
+        <img class="w-100" src="images/swap-2.png" class="br2 shadow"/>
       </section>
 
       <!-- HAMBURGER PIECE -->
@@ -146,7 +146,7 @@
       </article>
 
       <section class="fullest-container">
-        <img src="images/teamconstraint.png" class="br2 shadow"/>
+        <img class="w-100" src="images/teamconstraint.png" class="br2 shadow"/>
       </section>
       <span class="ph2 ph0-ns pb3 link db tc">
         <h3 class="f6 fw4 mt2 black-60 worksans">Don't mind the varying modal sizes...</h3>
@@ -165,7 +165,7 @@
       <!-- PROJECT DETAILS -->
       <article class="fl w-100 w-50-m w-50-ns pl4-l">
         <section class="fullest-container">
-          <img src="images/teamconstraintgif.gif" class="br2 shadow"/>
+          <img class="w-100" src="images/teamconstraintgif.gif" class="br2 shadow"/>
         </section>
       </article>
     </section>
