--- a/thinkabit.html
+++ b/thinkabit.html
@@ -90,7 +90,7 @@
     </div>
 
     <section class="fullest-container">
-      <img src="images/thinkabit-2.png" />
+      <img class="w-100" src="images/thinkabit-2.png" />
     </section>
 
     <!-- FIRST ROW -->
@@ -110,7 +110,7 @@
       </article>
 
       <section class="fullest-container">
-        <img src="images/thinkabit-userNeeds.png" class="br2 shadow"/>
+        <img class="w-100" src="images/thinkabit-userNeeds.png" class="br2 shadow"/>
       </section>
       <span class="ph2 ph0-ns pb3 link db tc">
         <h3 class="f6 fw4 mt2 black-60 worksans">Iterations: transitioning from 3-columns to 2-columns</h3>
@@ -125,7 +125,7 @@
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">We developed a pseudo-Agile approach to better streamline our goals. Each time we met at the Thinkabit Lab, the work was distributed in a way that provided equal attention to both research (i.e. interviews, observations) and prototype development. Aside from in-class discussions, we also designated 1-2 times to meet outside to update weekly progress via a GoogleDoc.</h3>
 
           <section class="fullest-container">
-            <img src="images/thinkabit-timeline.png" class="br2 shadow"/>
+            <img class="w-100" src="images/thinkabit-timeline.png" class="br2 shadow"/>
           </section>
 
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">While our target audience was predetermined, we still had to find ways to empathize with this group of people. Initial interactions determined a wide range of experience levels among users; better categorization & understanding the specific needs of each of these subgroups would be essential.</h3>
@@ -135,7 +135,7 @@
           </div>
 
           <section class="fullest-container">
-            <img src="images/thinkabit-problems.png" class="br2 shadow"/>
+            <img class="w-100" src="images/thinkabit-problems.png" class="br2 shadow"/>
           </section>
         </span>
       </article>
@@ -155,7 +155,7 @@
           </h3>
 
           <section class="fullest-container">
-            <img src="images/thinkabit-pamphlet1.jpeg" class="br2 shadow"/>
+            <img class="w-100" src="images/thinkabit-pamphlet1.jpeg" class="br2 shadow"/>
           </section>
 
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">Continued interviews with employees helped determine the layout of the pamphlet. Since we planned on having the pamphlet available in the lab as well, we asked people to look at a prototype and observed where they looked first to help further determine ordering of pages.</h3>
@@ -173,7 +173,7 @@
     </section>
 
     <section class="fullest-container">
-      <img src="images/thinkabit-3.png" />
+      <img class="w-100" src="images/thinkabit-3.png" />
     </section>
 
     <section class="cf w-100 ph3 ph4-m ph5-l mw8 center">
@@ -193,7 +193,7 @@
           <h3 class="f4 f3-ns mb0 black-90 sourceserif">Takeaways</h3>
 
           <section class="fullest-container">
-            <img src="images/thinkabit-conclusion.png"/>
+            <img class="w-100" src="images/thinkabit-conclusion.png"/>
           </section>
 
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">Our working product of the pamphlet guide was shared with users & received a number of positive responses, a majority of which approving the easy-to-access information. Targeting the key problem areas of usability allowed us to come up with a feasible solution that utilized ethnographic prinicples of observation and human-centered research.</h3>
