--- a/upcoming.html
+++ b/upcoming.html
@@ -95,7 +95,7 @@
 
         <!-- INLINE FULL BLEED IMAGE -->
         <section class="fullest-container">
-          <img src="images/upcomingviews.png" />
+          <img class="w-100" src="images/upcomingviews.png" />
         </section>
 
         <span class="ph2 ph0-ns pb3 db">
@@ -110,7 +110,7 @@
 
     <!-- FULL BLEED IMAGE -->
     <section class="fullest-container">
-      <img src="images/upcominglanding.png" />
+      <img class="w-100" src="images/upcominglanding.png" />
     </section>
 
     <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
