--- a/overwatch.html
+++ b/overwatch.html
@@ -85,7 +85,7 @@
     </div>
 
     <section class="fullest-container">
-      <img src="images/owappdisplay.png" />
+      <img class="w-100" src="images/owappdisplay.png" />
     </section>
 
     <!-- FIRST ROW -->
