--- a/teammatic.html
+++ b/teammatic.html
@@ -6,10 +6,24 @@
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.0/css/tachyons.min.css"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,700|Work+Sans:300,400,600,700,900" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+      $(window).scroll(function() {
+          var nav = $('header');
+          var top = 75;
+          if ($(window).scrollTop() >= top) {
+
+              nav.addClass('shadow bg-almost-white');
+
+          } else {
+              nav.removeClass('shadow bg-almost-white');
+          }
+      });
+    </script>
   </head>
   <body>
     <!-- HEADER NAV -->
-    <header class="bg-almost-white fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l zindex worksans">
+    <header class="fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l zindex worksans">
       <nav class="f5-ns f6">
         <div class="fl">
           <a class="link hover-orange black dib mr3 ttu fw6" href="index.html" title="Home">Alex Tran</a>
