Optimizemized all file sizes

--- a/overwatch.html
+++ b/overwatch.html
@@ -99,7 +99,7 @@
     </div>
 
     <section class="fullest-container">
-      <img class="w-100" src="images/owappdisplay.png" />
+      <img class="w-100" src="images/owappdisplay-min.png" />
     </section>
 
     <!-- FIRST ROW -->
