Corrected image classes + updated Fitted project

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </article>
 
       <article class="fl w-100 w-50-m w-50-ns pa3 pa2-ns">
-        <a href="#0">
+        <a href="fitted.html">
           <div class="aspect-ratio aspect-ratio--4x3 dim point">
             <img style="background-image:url(images/Artboard.png);"
             class="db bg-center cover aspect-ratio--object" />
