--- a/overwatch.html
+++ b/overwatch.html
@@ -54,7 +54,7 @@
 
     <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
       <!-- PROJECT OVERVIEW -->
-      <article class="fl w-100 w-50-m w-50-ns pa3 pa3-ns">
+      <article class="fl w-100 w-50-m w-60-ns pa3 pa3-ns">
         <span class="ph2 ph0-ns pb3 link db">
           <h3 class="f4 f3-ns mb0 black-90 sourceserif">"Nerf this!"</h3>
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">
@@ -67,7 +67,7 @@
       </article>
 
       <!-- PROJECT DETAILS -->
-      <article class="fl w-100 w-50-m w-50-ns pa3 pa3-ns">
+      <article class="fl w-100 w-50-m w-40-ns pa3 pa3-ns">
         <span class="ph2 ph0-ns pb3 link db">
           <div>
             <h3 class="f5 f5-ns ttu mb0 black-90 sourceserif">Platform</h3>
@@ -99,7 +99,7 @@
     </div>
 
     <section class="fullest-container">
-      <img class="w-100" src="images/owappdisplay-min.png" />
+      <img class="w-100" src="images/owappdisplay.png" />
     </section>
 
     <!-- FIRST ROW -->
