--- a/teammatic.html
+++ b/teammatic.html
@@ -56,9 +56,9 @@
       <!-- PROJECT OVERVIEW -->
       <article class="fl w-100 w-50-m w-60-ns pa3 pa3-ns">
         <span class="ph2 ph0-ns pb3 link db">
-          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">tl;dr</span></span><br />I was in charge of designing a team formation UI tool for instructors called Teammatic. It features a system for efficiently creating teams given a series of customizable constraints.</h3>
-          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">What was a challenge?</span><br />Accepting that perfect teams are impossible. However, we learned that instructors are generally happy with auto-generated teams, as long as they had freedom and flexibility to make changes.</h3>
-          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">What are the next steps?</span><br />It would be ideal to incorporate the entire team formation process into Teammatic, from gathering student data, to forming teams, to post-course feedback.</h3>
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">tl;dr</span></span><br/>I was in charge of designing a team formation UI tool for instructors called Teammatic. It features a system for efficiently creating teams given a series of customizable constraints.</h3>
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">What was a challenge?</span><br/>Accepting that perfect teams are impossible. However, we learned that instructors are generally happy with auto-generated teams, as long as they had freedom and flexibility to make changes.</h3>
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">What are the next steps?</span><br/>It would be ideal to incorporate the entire team formation process into Teammatic, from gathering student data, to forming teams, to post-course feedback.</h3>
         </span>
       </article>
 
@@ -96,7 +96,7 @@
     </div>
 
     <section class="fullest-container">
-      <img class="w-100" src="images/Teammatic-1.png" />
+      <img class="w-100" src="images/Teammatic-1.png"/>
     </section>
 
     <!-- FIRST ROW -->
@@ -110,7 +110,7 @@
       </article>
 
       <section class="fullest-container">
-        <img class="w-100" src="images/teamiteration.png" class="br2 shadow"/>
+        <img class="w-100 br2 shadow" src="images/teamiteration.png"/>
       </section>
       <span class="ph2 ph0-ns pb3 link db tc">
         <h3 class="f6 fw4 mt2 black-60 worksans">Iterations: transitioning from 3-columns to 2-columns</h3>
@@ -120,7 +120,7 @@
     <!-- <section class="cf w-100 ph3 pv3-ns ph4-m ph5-l mw8 center">
       <article class="fl w-100 w-50-m w-50-ns">
         <span class="ph2 ph0-ns pb3-ns db">
-          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">Student Swap Process (v1.0)</span></span><br />We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface.</h3>
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">Student Swap Process (v1.0)</span></span><br/>We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface.</h3>
           <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60">
             Doing so promotes the idea of a mixed-initiative interface: instructors can work within the given UI, but also have the flexibility to make changes where desired.
           </h3>
@@ -129,7 +129,7 @@
 
       <article class="fl w-100 w-50-m w-50-ns pl4-l">
         <section class="fullest-container">
-          <img src="images/swap.png" class="br2 shadow"/>
+          <img src="images/swap.png"/>
         </section>
       </article>
     </section> -->
@@ -137,7 +137,7 @@
     <section class="cf w-100 ph3 ph4-m ph5-l mw8 center">
       <article class="fl w-100-ns">
         <span class="ph2 ph0-ns pb3-ns db">
-          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">Student Swap Process (v1.0)</span></span><br />We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface.</h3>
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">Student Swap Process (v1.0)</span></span><br/>We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface.</h3>
           <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60">
             Doing so promotes the idea of a mixed-initiative interface: instructors can work within the given UI, but also have the flexibility to make changes where desired.
           </h3>
@@ -145,7 +145,7 @@
       </article>
 
       <section class="fullest-container">
-        <img class="w-100" src="images/swap-2.png" class="br2 shadow"/>
+        <img class="w-100 br2 shadow" src="images/swap-2.png"/>
       </section>
 
       <!-- HAMBURGER PIECE -->
@@ -153,15 +153,16 @@
         <span class="ph2 ph0-ns pb3-ns db">
           <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60">
             <span class="fw6 black-90">Constraint Modal (v0.3), (v0.6), (v1.0)</span>
-            <br />
+            <br/>
             Apart from the minor UI changes, our research showed that instructors wanted to see all available constraints possible and choose accordingly with the least amount of interaction cost.
           </h3>
         </span>
       </article>
 
       <section class="fullest-container">
-        <img class="w-100" src="images/teamconstraint.png" class="br2 shadow"/>
+        <img class="w-100 br2 shadow" src="images/teamconstraint.png"/>
       </section>
+
       <span class="ph2 ph0-ns pb3 link db tc">
         <h3 class="f6 fw4 mt2 black-60 worksans">Don't mind the varying modal sizes...</h3>
       </span>
@@ -170,7 +171,7 @@
         <span class="ph2 ph0-ns pb3-ns db">
           <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60">
             The iterations helped us address the issue of compatibility across students, allowing instructors to easily generate teams based on specific constraints.
-            <br /><br />
+            <br/><br/>
             Eventually going with a simple form layout made constraint adjustments easier.
           </h3>
         </span>
@@ -179,7 +180,7 @@
       <!-- PROJECT DETAILS -->
       <article class="fl w-100 w-50-m w-50-ns pl4-l">
         <section class="fullest-container">
-          <img class="w-100" src="images/teamconstraintgif.gif" class="br2 shadow"/>
+          <img class="w-100 br2 shadow" src="images/teamconstraintgif.gif"/>
         </section>
       </article>
     </section>
