--- a/thinkabit.html
+++ b/thinkabit.html
@@ -60,11 +60,11 @@
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">
             Qualcomm's Thinkabit Lab is a makerspace for Qualcomm employees & family members to tinker with the technology they offer, such as their Arduino boards.
 
-            <br /><br />
+            <br/><br/>
 
             The problem with the space is that it can be quite intimidating for newcomers and even returners who are unsure how to proceed. It was an opportunity to develop a strong understanding of the physical and cognitive space by leading user interviews and conducting ethnographic research.
 
-            <br /><br />
+            <br/><br/>
 
             We were able to improve the user interaction flow within the Lab by designing an informational pamphlet for the onboarding process.
           </h3>
@@ -104,7 +104,7 @@
     </div>
 
     <section class="fullest-container">
-      <img class="w-100" src="images/thinkabit-2.png" />
+      <img class="w-100" src="images/thinkabit-2.png"/>
     </section>
 
     <!-- FIRST ROW -->
@@ -124,7 +124,7 @@
       </article>
 
       <section class="fullest-container">
-        <img class="w-100" src="images/thinkabit-userNeeds.png" class="br2 shadow"/>
+        <img class="w-100 br2 shadow" src="images/thinkabit-userNeeds.png"/>
       </section>
       <span class="ph2 ph0-ns pb3 link db tc">
         <h3 class="f6 fw4 mt2 black-60 worksans">Iterations: transitioning from 3-columns to 2-columns</h3>
@@ -139,7 +139,7 @@
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">We developed a pseudo-Agile approach to better streamline our goals. Each time we met at the Thinkabit Lab, the work was distributed in a way that provided equal attention to both research (i.e. interviews, observations) and prototype development. Aside from in-class discussions, we also designated 1-2 times to meet outside to update weekly progress via a GoogleDoc.</h3>
 
           <section class="fullest-container">
-            <img class="w-100" src="images/thinkabit-timeline.png" class="br2 shadow"/>
+            <img class="w-100 br2 shadow" src="images/thinkabit-timeline.png"/>
           </section>
 
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">While our target audience was predetermined, we still had to find ways to empathize with this group of people. Initial interactions determined a wide range of experience levels among users; better categorization & understanding the specific needs of each of these subgroups would be essential.</h3>
@@ -149,7 +149,7 @@
           </div>
 
           <section class="fullest-container">
-            <img class="w-100" src="images/thinkabit-problems.png" class="br2 shadow"/>
+            <img class="w-100 br2 shadow" src="images/thinkabit-problems.png"/>
           </section>
         </span>
       </article>
@@ -163,13 +163,13 @@
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">
             One of the leading ideas was to re-organize the space and put up labels, but that only helped solve 2 of the categories. In the end, we decided to make a pamphlet, as we felt it was the best solution that could address the variety of problem areas.
 
-            <br /><br />
+            <br/><br/>
 
             For the pamphlet we worked to go through several stages of testing. At first, we had a simple version that was created by folding together paper, with post-it notes on each page that included the potential item that would go there. These included a map, table of contents, and list of materials.
           </h3>
 
           <section class="fullest-container">
-            <img class="w-100" src="images/thinkabit-pamphlet1.jpeg" class="br2 shadow"/>
+            <img class="w-100 br2 shadow" src="images/thinkabit-pamphlet1.jpeg"/>
           </section>
 
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">Continued interviews with employees helped determine the layout of the pamphlet. Since we planned on having the pamphlet available in the lab as well, we asked people to look at a prototype and observed where they looked first to help further determine ordering of pages.</h3>
@@ -187,15 +187,15 @@
     </section>
 
     <section class="fullest-container">
-      <img class="w-100" src="images/thinkabit-3.png" />
+      <img class="w-100" src="images/thinkabit-3.png"/>
     </section>
 
     <section class="cf w-100 ph3 ph4-m ph5-l mw8 center">
       <article class="fl w-100-ns">
         <span class="ph2 ph0-ns pb3-ns db">
-          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">Getting Started</span></span><br />Driven by concerns users had on how to gauge experience level. A bio for the Lab and its hosts was included, as well as a list of the materials and a map. This was driven our findings of 1) difficulty of navigating the space, and 2) understanding what is available to use.</h3>
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">Getting Started</span></span><br/>Driven by concerns users had on how to gauge experience level. A bio for the Lab and its hosts was included, as well as a list of the materials and a map. This was driven our findings of 1) difficulty of navigating the space, and 2) understanding what is available to use.</h3>
 
-          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">Description</span></span><br />Briefly explains the purpose of the Lab. Users get a sense of the experience before digging deeper. The goal was to provide users, especially first-timers, a sense of comfort wih the vast array of materials provided. A better onboarding process would easily reduce the need for troubleshooting.</h3>
+          <h3 class="f6 f5-ns fw4 mt3 worksans lh-copy black-60"><span class="fw6 black-90">Description</span></span><br/>Briefly explains the purpose of the Lab. Users get a sense of the experience before digging deeper. The goal was to provide users, especially first-timers, a sense of comfort wih the vast array of materials provided. A better onboarding process would easily reduce the need for troubleshooting.</h3>
         </span>
       </article>
     </section>
@@ -207,7 +207,7 @@
           <h3 class="f4 f3-ns mb0 black-90 sourceserif">Takeaways</h3>
 
           <section class="fullest-container">
-            <img class="w-100" src="images/thinkabit-conclusion.png"/>
+            <img class="w-100 br2 shadow" src="images/thinkabit-conclusion.png"/>
           </section>
 
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">Our working product of the pamphlet guide was shared with users & received a number of positive responses, a majority of which approving the easy-to-access information. Targeting the key problem areas of usability allowed us to come up with a feasible solution that utilized ethnographic prinicples of observation and human-centered research.</h3>
