--- a/upcoming.html
+++ b/upcoming.html
@@ -54,7 +54,7 @@
 
     <section class="cf pv2 w-100 ph3 pv3 pv4-ns ph4-m ph5-l mw8 center">
       <!-- PROJECT OVERVIEW -->
-      <article class="fl w-100 w-50-m w-50-ns pa3 pa3-ns">
+      <article class="fl w-100 w-50-m w-60-ns pa3 pa3-ns">
         <span class="ph2 ph0-ns pb3 link db">
           <h3 class="f4 f3-ns mb0 black-90 sourceserif">Another podcast?</h3>
           <h3 class="f6 f5-ns fw4 mt2 black-60 worksans lh-copy">
@@ -69,7 +69,7 @@
       </article>
 
       <!-- PROJECT DETAILS -->
-      <article class="fl w-100 w-50-m w-50-ns pa3 pa3-ns">
+      <article class="fl w-100 w-50-m w-40-ns pa3 pa3-ns">
         <span class="ph2 ph0-ns pb3 link db">
           <div>
             <h3 class="f5 f5-ns ttu mb0 black-90 sourceserif">Role</h3>
@@ -84,7 +84,7 @@
             <h3 class="f6 f5-ns fw4 mt2 black-60 worksans">Bi-weekly episodes</h3>
           </div>
           <div>
-            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow ba b--black-05 br2 no-underline mid-gray worksans link hover-white bg-animate hover-bg-orange" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415?mt=2" target="_blank">Listen on iTunes</a>
+            <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow ba b--black-05 br2 no-underline mid-gray worksans link hover-white bg-animate hover-bg-orange" href="https://itunes.apple.com/us/podcast/up-coming/id1263597415?mt=2" target="_blank">iTunes</a>
             <a class="f6 fw6 ttu mt4 mb0 pv2 ph3 bg-white dib shadow no-underline mid-gray worksans link ba b--black-05 br2 hover-white bg-animate hover-bg-light-purple" href="https://spectrum.chat/up-coming" target="_blank">Join on Spectrum</a>
           </div>
         </span>
